src/snapshots/redmine_tui_draft__test_support__issue_property_conflict_widget_full_area_with_message_rows_and_buttons.snap
---
source: src/test_support.rs
expression: describe_buffer(terminal.backend().buffer())
---
area=Rect { x: 0, y: 0, width: 120, height: 28 }
00: "編 集 内 容 と サ ー バ ー 内 容 が 競 合 し て い ま す 。 採 用 す る 方 を 選 択 し て く だ さ い 。                                                   " | 0:"編" fg=Reset bg=Reset mod=NONE, 2:"集" fg=Reset bg=Reset mod=NONE, 4:"内" fg=Reset bg=Reset mod=NONE, 6:"容" fg=Reset bg=Reset mod=NONE, 8:"と" fg=Reset bg=Reset mod=NONE, 10:"サ" fg=Reset bg=Reset mod=NONE, 12:"ー" fg=Reset bg=Reset mod=NONE, 14:"バ" fg=Reset bg=Reset mod=NONE, 16:"ー" fg=Reset bg=Reset mod=NONE, 18:"内" fg=Reset bg=Reset mod=NONE, 20:"容" fg=Reset bg=Reset mod=NONE, 22:"が" fg=Reset bg=Reset mod=NONE, 24:"競" fg=Reset bg=Reset mod=NONE, 26:"合" fg=Reset bg=Reset mod=NONE, 28:"し" fg=Reset bg=Reset mod=NONE, 30:"て" fg=Reset bg=Reset mod=NONE, 32:"い" fg=Reset bg=Reset mod=NONE, 34:"ま" fg=Reset bg=Reset mod=NONE, 36:"す" fg=Reset bg=Reset mod=NONE, 38:"。" fg=Reset bg=Reset mod=NONE, 40:"採" fg=Reset bg=Reset mod=NONE, 42:"用" fg=Reset bg=Reset mod=NONE, 44:"す" fg=Reset bg=Reset mod=NONE, 46:"る" fg=Reset bg=Reset mod=NONE, 48:"方" fg=Reset bg=Reset mod=NONE, 50:"を" fg=Reset bg=Reset mod=NONE, 52:"選" fg=Reset bg=Reset mod=NONE, 54:"択" fg=Reset bg=Reset mod=NONE, 56:"し" fg=Reset bg=Reset mod=NONE, 58:"て" fg=Reset bg=Reset mod=NONE, 60:"く" fg=Reset bg=Reset mod=NONE, 62:"だ" fg=Reset bg=Reset mod=NONE, 64:"さ" fg=Reset bg=Reset mod=NONE, 66:"い" fg=Reset bg=Reset mod=NONE, 68:"。" fg=Reset bg=Reset mod=NONE
01: "                                                                                                                        "
02: "プ ロ パ テ ィ 名                    編 集 前 の 値                   編 集 後 の 値                      サ ー バ ー の 値                   " | 0:"プ" fg=Reset bg=Reset mod=BOLD, 2:"ロ" fg=Reset bg=Reset mod=BOLD, 4:"パ" fg=Reset bg=Reset mod=BOLD, 6:"テ" fg=Reset bg=Reset mod=BOLD, 8:"ィ" fg=Reset bg=Reset mod=BOLD, 10:"名" fg=Reset bg=Reset mod=BOLD, 31:"編" fg=Reset bg=Reset mod=BOLD, 33:"集" fg=Reset bg=Reset mod=BOLD, 35:"前" fg=Reset bg=Reset mod=BOLD, 37:"の" fg=Reset bg=Reset mod=BOLD, 39:"値" fg=Reset bg=Reset mod=BOLD, 59:"編" fg=Reset bg=Reset mod=BOLD, 61:"集" fg=Reset bg=Reset mod=BOLD, 63:"後" fg=Reset bg=Reset mod=BOLD, 65:"の" fg=Reset bg=Reset mod=BOLD, 67:"値" fg=Reset bg=Reset mod=BOLD, 90:"サ" fg=Reset bg=Reset mod=BOLD, 92:"ー" fg=Reset bg=Reset mod=BOLD, 94:"バ" fg=Reset bg=Reset mod=BOLD, 96:"ー" fg=Reset bg=Reset mod=BOLD, 98:"の" fg=Reset bg=Reset mod=BOLD, 100:"値" fg=Reset bg=Reset mod=BOLD
03: "ス テ ー タ ス                      New                         In Progress after local        Closed by server side update  " | 0:"ス" fg=Reset bg=Reset mod=NONE, 2:"テ" fg=Reset bg=Reset mod=NONE, 4:"ー" fg=Reset bg=Reset mod=NONE, 6:"タ" fg=Reset bg=Reset mod=NONE, 8:"ス" fg=Reset bg=Reset mod=NONE, 31:"N" fg=Reset bg=Reset mod=NONE, 32:"e" fg=Reset bg=Reset mod=NONE, 33:"w" fg=Reset bg=Reset mod=NONE, 59:"I" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 60:"n" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 61:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 62:"P" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 63:"r" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 64:"o" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 65:"g" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 66:"r" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 67:"e" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 68:"s" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 69:"s" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 70:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 71:"a" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 72:"f" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 73:"t" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 74:"e" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 75:"r" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 76:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 77:"l" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 78:"o" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 79:"c" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 80:"a" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 81:"l" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 82:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 83:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 84:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 85:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 86:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 87:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 88:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 90:"C" fg=Reset bg=Reset mod=NONE, 91:"l" fg=Reset bg=Reset mod=NONE, 92:"o" fg=Reset bg=Reset mod=NONE, 93:"s" fg=Reset bg=Reset mod=NONE, 94:"e" fg=Reset bg=Reset mod=NONE, 95:"d" fg=Reset bg=Reset mod=NONE, 97:"b" fg=Reset bg=Reset mod=NONE, 98:"y" fg=Reset bg=Reset mod=NONE, 100:"s" fg=Reset bg=Reset mod=NONE, 101:"e" fg=Reset bg=Reset mod=NONE, 102:"r" fg=Reset bg=Reset mod=NONE, 103:"v" fg=Reset bg=Reset mod=NONE, 104:"e" fg=Reset bg=Reset mod=NONE, 105:"r" fg=Reset bg=Reset mod=NONE, 107:"s" fg=Reset bg=Reset mod=NONE, 108:"i" fg=Reset bg=Reset mod=NONE, 109:"d" fg=Reset bg=Reset mod=NONE, 110:"e" fg=Reset bg=Reset mod=NONE, 112:"u" fg=Reset bg=Reset mod=NONE, 113:"p" fg=Reset bg=Reset mod=NONE, 114:"d" fg=Reset bg=Reset mod=NONE, 115:"a" fg=Reset bg=Reset mod=NONE, 116:"t" fg=Reset bg=Reset mod=NONE, 117:"e" fg=Reset bg=Reset mod=NONE
04: "期 日                            2026-02-01                  2026-02-15                     2026-02-20                    " | 0:"期" fg=Reset bg=Reset mod=NONE, 2:"日" fg=Reset bg=Reset mod=NONE, 31:"2" fg=Reset bg=Reset mod=NONE, 32:"0" fg=Reset bg=Reset mod=NONE, 33:"2" fg=Reset bg=Reset mod=NONE, 34:"6" fg=Reset bg=Reset mod=NONE, 35:"-" fg=Reset bg=Reset mod=NONE, 36:"0" fg=Reset bg=Reset mod=NONE, 37:"2" fg=Reset bg=Reset mod=NONE, 38:"-" fg=Reset bg=Reset mod=NONE, 39:"0" fg=Reset bg=Reset mod=NONE, 40:"1" fg=Reset bg=Reset mod=NONE, 59:"2" fg=Reset bg=Reset mod=NONE, 60:"0" fg=Reset bg=Reset mod=NONE, 61:"2" fg=Reset bg=Reset mod=NONE, 62:"6" fg=Reset bg=Reset mod=NONE, 63:"-" fg=Reset bg=Reset mod=NONE, 64:"0" fg=Reset bg=Reset mod=NONE, 65:"2" fg=Reset bg=Reset mod=NONE, 66:"-" fg=Reset bg=Reset mod=NONE, 67:"1" fg=Reset bg=Reset mod=NONE, 68:"5" fg=Reset bg=Reset mod=NONE, 90:"2" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 91:"0" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 92:"2" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 93:"6" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 94:"-" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 95:"0" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 96:"2" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 97:"-" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 98:"2" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 99:"0" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 100:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 101:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 102:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 103:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 104:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 105:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 106:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 107:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 108:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 109:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 110:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 111:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 112:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 113:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 114:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 115:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 116:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 117:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 118:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 119:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE
05: "                                                                                                                        "
06: "                                                                                               ┌────────────┐ ┌────────┐" | 95:"┌" fg=Reset bg=Reset mod=NONE, 96:"─" fg=Reset bg=Reset mod=NONE, 97:"─" fg=Reset bg=Reset mod=NONE, 98:"─" fg=Reset bg=Reset mod=NONE, 99:"─" fg=Reset bg=Reset mod=NONE, 100:"─" fg=Reset bg=Reset mod=NONE, 101:"─" fg=Reset bg=Reset mod=NONE, 102:"─" fg=Reset bg=Reset mod=NONE, 103:"─" fg=Reset bg=Reset mod=NONE, 104:"─" fg=Reset bg=Reset mod=NONE, 105:"─" fg=Reset bg=Reset mod=NONE, 106:"─" fg=Reset bg=Reset mod=NONE, 107:"─" fg=Reset bg=Reset mod=NONE, 108:"┐" fg=Reset bg=Reset mod=NONE, 110:"┌" fg=Reset bg=Reset mod=NONE, 111:"─" fg=Reset bg=Reset mod=NONE, 112:"─" fg=Reset bg=Reset mod=NONE, 113:"─" fg=Reset bg=Reset mod=NONE, 114:"─" fg=Reset bg=Reset mod=NONE, 115:"─" fg=Reset bg=Reset mod=NONE, 116:"─" fg=Reset bg=Reset mod=NONE, 117:"─" fg=Reset bg=Reset mod=NONE, 118:"─" fg=Reset bg=Reset mod=NONE, 119:"┐" fg=Reset bg=Reset mod=NONE
07: "                                                                                               │キ ャ ン セ ル   │ │続 行     │" | 95:"│" fg=Reset bg=Reset mod=NONE, 96:"キ" fg=Reset bg=Reset mod=NONE, 98:"ャ" fg=Reset bg=Reset mod=NONE, 100:"ン" fg=Reset bg=Reset mod=NONE, 102:"セ" fg=Reset bg=Reset mod=NONE, 104:"ル" fg=Reset bg=Reset mod=NONE, 108:"│" fg=Reset bg=Reset mod=NONE, 110:"│" fg=Reset bg=Reset mod=NONE, 111:"続" fg=Reset bg=Reset mod=NONE, 113:"行" fg=Reset bg=Reset mod=NONE, 119:"│" fg=Reset bg=Reset mod=NONE
08: "                                                                                               └────────────┘ └────────┘" | 95:"└" fg=Reset bg=Reset mod=NONE, 96:"─" fg=Reset bg=Reset mod=NONE, 97:"─" fg=Reset bg=Reset mod=NONE, 98:"─" fg=Reset bg=Reset mod=NONE, 99:"─" fg=Reset bg=Reset mod=NONE, 100:"─" fg=Reset bg=Reset mod=NONE, 101:"─" fg=Reset bg=Reset mod=NONE, 102:"─" fg=Reset bg=Reset mod=NONE, 103:"─" fg=Reset bg=Reset mod=NONE, 104:"─" fg=Reset bg=Reset mod=NONE, 105:"─" fg=Reset bg=Reset mod=NONE, 106:"─" fg=Reset bg=Reset mod=NONE, 107:"─" fg=Reset bg=Reset mod=NONE, 108:"┘" fg=Reset bg=Reset mod=NONE, 110:"└" fg=Reset bg=Reset mod=NONE, 111:"─" fg=Reset bg=Reset mod=NONE, 112:"─" fg=Reset bg=Reset mod=NONE, 113:"─" fg=Reset bg=Reset mod=NONE, 114:"─" fg=Reset bg=Reset mod=NONE, 115:"─" fg=Reset bg=Reset mod=NONE, 116:"─" fg=Reset bg=Reset mod=NONE, 117:"─" fg=Reset bg=Reset mod=NONE, 118:"─" fg=Reset bg=Reset mod=NONE, 119:"┘" fg=Reset bg=Reset mod=NONE
09: "                                                                                                                        "
10: "                                                                                                                        "
11: "                                                                                                                        "
12: "                                                                                                                        "
13: "                                                                                                                        "
14: "                                                                                                                        "
15: "                                                                                                                        "
16: "                                                                                                                        "
17: "                                                                                                                        "
18: "                                                                                                                        "
19: "                                                                                                                        "
20: "                                                                                                                        "
21: "                                                                                                                        "
22: "                                                                                                                        "
23: "                                                                                                                        "
24: "                                                                                                                        "
25: "                                                                                                                        "
26: "                                                                                                                        "
27: "                                                                                                                        "
